--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Van Heek Software</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/vhsoftware.css">
+    <link rel="stylesheet" href="css/parallax.css">
+
+</head>
+<body>
+<div class="parallax-wrapper">
+
+    <!-- Home Section -->
+    <a name="home"/>
+    <div class="parallax-container" style="background-image: url(/website/images/cover.jpg); justify-content: center; align-items: center; height: 100vh">
+        <div class="header">
+
+            <!-- Nav Bar -->
+            <div class="navbar">
+                <div>
+                    <a href="#about">ABOUT ME</a>
+                </div>
+                <div>
+                    <a href="#services">SKILLS & SERVICES</a>
+                </div>
+                <div>
+                    <a href="#portfolio">PORTFOLIO</a>
+                </div>
+                <div>
+                    <a href="#contact">CONTACT</a>
+                </div>
+            </div>
+
+
+            <img src="images/vhsoftware_brand_logo.png" alt="Logo" style="max-height: 100%; width: auto; height: auto">
+            <!--
+            <div style="display: flex; height: 100%; align-items: center; margin-left: 10px; text-align: center; max-width: 50%"><h1 style="font-size: 50px; font-family: Arial">Van Heek Software</h1></div>
+            -->
+
+            <!-- To balance it out -->
+            <div class="navbar"></div>
+
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <a name="about"/>
+    <div class="static-container section">
+        <h1>About Me</h1>
+        <div class ="about">
+            <img src="images/profile.png" alt="Profile" class="circle" style="margin: 20px; max-width: 280px;">
+            <p>
+                My name is Justin van Heek and I am a freelance software developer.
+                I have experience developing a wide variety of products including websites, mobile applications, desktop applications and enterprise software.
+                In the past I have also performed research on machine learning and have been the primary author of multiple published research papers on the subject.
+                I have a passion for all things technological in nature and I am always excited to learn about the newest advancements in this ever-growing field.
+            </p>
+        </div>
+    </div>
+
+    <!-- Services Section -->
+    <a name="services"/>
+    <div class="static-container section" style="background-color: lightgray;">
+        <h1>Skills & Services</h1>
+        <div class="services">
+            <div>
+                <h2>Website Design</h2>
+                HTML<br>
+                JavaScript<br>
+                CSS<br>
+                PHP<br>
+                SQL<br>
+            </div>
+            <div>
+                <h2>Desktop Applications</h2>
+                Python<br>
+                Java<br>
+                C#<br>
+                C++
+            </div>
+            <div>
+                <h2>Mobile Applications</h2>
+                Android - Java<br>
+                iOS - Swift
+            </div>
+            <div>
+                <h2>Other Skills & Services</h2>
+                Cloud - AWS & Microsoft Azure<br>
+                RESTful API<br>
+                Machine Learning<br>
+                Unit Testing<br>
+                Research & Development
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Section -->
+    <a name="portfolio"/>
+    <div class="static-container section">
+        <h1>Portfolio</h1>
+        <div class="portfolio">
+            <div>
+                <img src="/website/images/smartphone.png" style="width: 30%">
+                <p>Mobile Applications</p>
+            </div>
+            <div>
+                <img src="/website/images/doc.png" style="width: 30%">
+                <p>Published Papers</p>
+            </div>
+            <div>
+                <img src="/website/images/other.png" style="width: 30%">
+                <p>Other Projects</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Contact Section -->
+    <a name="contact"/>
+    <div class="static-container section" style="background-color: lightgray">
+        <h1>Contact</h1>
+        <p>
+            Please feel free to contact me at any time. I would love to have a chat.
+        </p>
+        <p>
+            Email: <a href="mailto:inquiries@vhsoftware.dev">inquiries@vhsoftware.dev</a>
+        </p>
+    </div>
+
+
+
+</div>
+</body>
+</html>
