Fixed image path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Home Section -->
     <a name="home"/>
-    <div class="parallax-container" style="background-image: url(/website/images/cover.jpg); justify-content: center; align-items: center; height: 100vh">
+    <div class="parallax-container" style="background-image: url(images/cover.jpg); justify-content: center; align-items: center; height: 100vh">
         <div class="header">
 
             <!-- Nav Bar -->
@@ -102,15 +102,15 @@
         <h1>Portfolio</h1>
         <div class="portfolio">
             <div>
-                <img src="/website/images/smartphone.png" style="width: 30%">
+                <img src="images/smartphone.png" style="width: 30%">
                 <p>Mobile Applications</p>
             </div>
             <div>
-                <img src="/website/images/doc.png" style="width: 30%">
+                <img src="images/doc.png" style="width: 30%">
                 <p>Published Papers</p>
             </div>
             <div>
-                <img src="/website/images/other.png" style="width: 30%">
+                <img src="images/other.png" style="width: 30%">
                 <p>Other Projects</p>
             </div>
         </div>
