improved parallax background for mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <section class="cid-rAhibW11P2 mbr-fullscreen mbr-parallax-background" id="header2-7">
 -->
 
-        <div class="parallax-container" style="background-image: url(assets/images/cover.jpg); height: 100vh">
+        <div class="parallax-container" style="background-image: url(assets/images/cover.jpg); height: 100vh; background-position: 10% 50%;">
 
 
         <!--<div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>-->
