--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
                                     </a>
                                 </div>
                             </div>
+							<div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Research Paper">
+                                <div href="#lb-gallery2-f" data-slide-to="5" data-toggle="modal">
+                                    <a href="ssci2018.html">
+                                        <img src="assets/images/portfolio/icvs2019/Segmentation.png" alt="ICVS 2019" title="ICVS 2019">
+                                        <span class="icon-focus"></span>
+                                        <span class="mbr-gallery-title mbr-fonts-style display-7">A Comparison of Computational Intelligence Techniques for Real-Time Discrete Multivariate Time Series Classification of Conducting Gestures
+										</span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="clearfix"></div>
