--- a/index.html
+++ b/index.html
@@ -343,10 +343,20 @@
                             </div>
 							<div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Research Paper">
                                 <div href="#lb-gallery2-f" data-slide-to="5" data-toggle="modal">
-                                    <a href="ssci2018.html">
+                                    <a href="icvs2019.html">
                                         <img src="assets/images/portfolio/icvs2019/Segmentation.png" alt="ICVS 2019" title="ICVS 2019">
                                         <span class="icon-focus"></span>
                                         <span class="mbr-gallery-title mbr-fonts-style display-7">A Comparison of Computational Intelligence Techniques for Real-Time Discrete Multivariate Time Series Classification of Conducting Gestures
+										</span>
+                                    </a>
+                                </div>
+                            </div>
+							<div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Research Paper">
+                                <div href="#lb-gallery2-f" data-slide-to="6" data-toggle="modal">
+                                    <a href="ssci2019.html">
+                                        <img src="assets/images/portfolio/ssci2019/gesture.png" alt="SSCI 2019" title="SSCI 2019">
+                                        <span class="icon-focus"></span>
+                                        <span class="mbr-gallery-title mbr-fonts-style display-7">Analysis and Selection of Classifiers for Gesture Characteristics Recognition Based on MGRS Framework
 										</span>
                                     </a>
                                 </div>
