--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Research Paper">
                                 <div href="#lb-gallery2-f" data-slide-to="4" data-toggle="modal">
                                     <a href="ssci2018.html">
-                                        <img src="assets/images/portfolio/ssci2018/conversion.png" alt="SSCI 2018" title="SSCI 2018">
+                                        <img src="assets/images/portfolio/ssci2018/icon.png" alt="SSCI 2018" title="SSCI 2018">
                                         <span class="icon-focus"></span>
                                         <span class="mbr-gallery-title mbr-fonts-style display-7">An Evaluation Study of Recognizing Conducting Gesture Using Computational Intelligence Techniques</span>
                                     </a>
@@ -346,7 +346,7 @@
 							<div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Research Paper">
                                 <div href="#lb-gallery2-f" data-slide-to="5" data-toggle="modal">
                                     <a href="icvs2019.html">
-                                        <img src="assets/images/portfolio/icvs2019/Segmentation.png" alt="ICVS 2019" title="ICVS 2019">
+                                        <img src="assets/images/portfolio/icvs2019/icon.png" alt="ICVS 2019" title="ICVS 2019">
                                         <span class="icon-focus"></span>
                                         <span class="mbr-gallery-title mbr-fonts-style display-7">A Comparison of Computational Intelligence Techniques for Real-Time Discrete Multivariate Time Series Classification of Conducting Gestures
 										</span>
@@ -356,7 +356,7 @@
 							<div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Research Paper">
                                 <div href="#lb-gallery2-f" data-slide-to="6" data-toggle="modal">
                                     <a href="ssci2019.html">
-                                        <img src="assets/images/portfolio/ssci2019/gesture.png" alt="SSCI 2019" title="SSCI 2019">
+                                        <img src="assets/images/portfolio/ssci2019/icon.jpg" alt="SSCI 2019" title="SSCI 2019">
                                         <span class="icon-focus"></span>
                                         <span class="mbr-gallery-title mbr-fonts-style display-7">Analysis and Selection of Classifiers for Gesture Characteristics Recognition Based on MGRS Framework
 										</span>
